form spacing fixes

--- a/mysite/users/static/users/main.css
+++ b/mysite/users/static/users/main.css
@@ -81,6 +81,8 @@
   border: solid #bbb5b5 1px;
   border-radius: 40px;
   margin-top: 50px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .signup-legend{
@@ -96,7 +98,7 @@
   text-align: center;
   color: red;
   display: none;
-  font-size: 10pt;
+  font-size: 8pt;
   font-family: 'Montserrat', sans-serif;
   margin-left: 1%;
 }
